[package]
name = "sequoia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# planned dependencies:
# eframe
# egui
# wgpu https://sotrh.github.io/learn-wgpu/
# egui-wgpu (included in egui i think)
# tracing

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
egui = { version = "0.20", default-features = true }
glium = "0.32"
egui_glium = "0.20"
glam = "0.20"
egui_dock = "0.3"
